--- a/src/i18n/dictionaries/en.json
+++ b/src/i18n/dictionaries/en.json
@@ -432,5 +432,8 @@
         "text": "like"
       }
     }
+  },
+  "sectorPage": {
+    "title": "Browse Manufacturer and Distributor Catalog Collection"
   }
 }
